Learned the very basics of CSS Grid
Grid is complicated. I read up on developer.mozilla and it seems that the CSS grid is just a better version of the Flexbox??

Anyway, I did some heavy edits to the style.css

--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
 </head>
 
 <body>
-    <div class="colonge1">Colonge</div>
+    
 
     <article>
-    <h1>Mercedes-Benz Man Blue <small>for men</small></h1> 
-    <p class="styledimg"></p>
-    <p>The fresh, spicy and aromatic fragrance of Mercedes Benz Man Blue is an invigorating masculine scent. 
-    Created in 2017, this scent comes from the design house of Mercedes Benz. 
-    At the top are notes from Pepper and Bergamot. 
-    The heart is warm and seductive with hints from Lavender and Tonka Bean. 
-    The base is seductive with notes from Amber and Musk.</p>
+<div class="wrapper"> 
+    <div class="box1"></div>
+    <div class="box2">
+        <p>Colonge</p>
+        <h1>Mercedes-Benz Man Intense <small>for men</small></h1>
+    <p>It’s woodier and wilder than ever... 
+        As he created this intense and highly sensual version of Mercedes-Benz Man, 
+        French Master Perfumer Olivier Cresp drew on the essential ingredients of the original version 
+        while adding a touch of contemporary flair.</p>
 
-    $90.00
-    <em>
-    $80.00
-    </em>
-    </article>
+    $86.00
+    <em>$80.00</em>
+
     <p>Add to cart</p>
-
+    </div>
+</div>
+    </article>
 </body>
 
 </html>
